...
                                                <action selector="toggleFullScreen:" target="Ady-hI-5gd" id="dU3-MA-1Rq"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Window" id="aUF-d1-5bR">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
                                    <items>
                                        <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
                                            <connections>
                                                <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
...
                    <view key="view" id="m2S-Jp-Qdl">
                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yxB-oG-QsE">
                                <rect key="frame" x="390" y="222" width="72" height="32"/>
                                <buttonCell key="cell" type="push" title="Done" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="OXR-DX-k3K">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="buttonClicked:" target="XfG-lQ-9wD" id="ytp-we-9sP"/>
                                </connections>
...
                            </wkWebView>
                            <progressIndicator wantsLayer="YES" maxValue="100" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="mDJ-6y-xtH">
                                <rect key="frame" x="20" y="20" width="16" height="16"/>
                            </progressIndicator>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ods-3r-ABI">
                                <rect key="frame" x="203" y="7" width="74" height="32"/>
                                <buttonCell key="cell" type="push" title="Start!" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Kwy-g1-Ja7">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="startClicked:" target="XfG-lQ-9wD" id="ubV-kZ-XOc"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2bH-Vu-fdR">
                                <rect key="frame" x="381" y="7" width="81" height="32"/>
                                <buttonCell key="cell" type="push" title="Mobile" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="4ca-wh-r0f">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="switchToMobileAgent:" target="XfG-lQ-9wD" id="CnF-wJ-CKs"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bjs-I9-eIm">
                                <rect key="frame" x="312" y="7" width="71" height="32"/>
                                <buttonCell key="cell" type="push" title="Edge" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8rn-zg-ayd">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="switchToEdgeAgent:" target="XfG-lQ-9wD" id="lcd-xg-YUn"/>
                                </connections>
...
